Redesigned most of the UI to work in non-modal mode and be switchable via the navbar. This appears to have also increased browser performance and fixed animations in the graphing engine, as well as allowed the diagram to resize along with the browser window. Navigation now uses AngularJS $location. Accounts are collapsed by default in transaction view for privacy.

--- a/vogon-web/vogon-web-service/src/main/webapp/css/style.css
+++ b/vogon-web/vogon-web-service/src/main/webapp/css/style.css
@@ -2,18 +2,14 @@
 	cursor: pointer
 }
 
+.clickable {
+	cursor: pointer
+}
+
 .total-amount {
 	font-style: italic;
 }
 
 input[type=file].form-control-file {
 	display: inline-block;
-}
-
-.center-contents {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-right: -50%;
-	transform: translate(-50%, -50%)
 }
